Add Auth Scheme classes and integrations (#164)